--- a/src/app/shared/search-category-carousel/search-category-carousel.component.html
+++ b/src/app/shared/search-category-carousel/search-category-carousel.component.html
@@ -1,12 +1,52 @@
 <div class="search_category_carousel__container">
-  <div class="search_category_carousel__item" *ngFor="let category of (searchCategories$ | async)">
-
-    <div class="__item_title">
-      {{category.searchCategoryTitle}}
+  <nav>
+    <div class="nav nav-pills nav-justified" id="nav-tab" role="tablist">
+      <a class="nav-link"
+         *ngFor="let category of (searchCategories$ | async); let isFirst = first"
+         [class.active]="isFirst"
+         [attr.href]="'#nav-'+category.searchCategoryTitle"
+         data-bs-toggle="tab"
+         role="tab"
+         [attr.aria-controls]="'nav-'+category.searchCategoryTitle"
+         aria-selected="true">{{category.searchCategoryTitle}}</a>
     </div>
-    <div class="__item_search-template">
-      <app-search-template-gallery [SearchTemplates]="category.searchTemplates" [SearchCategoryTitle]="category.searchCategoryTitle"></app-search-template-gallery>
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show "
+         *ngFor="let category of (searchCategories$ | async); let isFirst = first"
+         [class.active]="isFirst"
+         [attr.id]="'nav-'+category.searchCategoryTitle"
+         [attr.aria-labelledby]="'nav-'+category.searchCategoryTitle"
+         role="tabpanel"
+    >
+      <app-search-template-gallery
+        [SearchTemplates]="category.searchTemplates"
+        [SearchCategoryTitle]="category.searchCategoryTitle">
+      </app-search-template-gallery>
     </div>
-
   </div>
+  <div>
+    <input type="text" [(ngModel)]="LocalStorage_save">
+    <button (click)="getLocalStorage()">Get from LocalStorage</button>
+  </div>
+  <div>
+    <input type="text" [(ngModel)]="Outside_save">
+    <button (click)="setLocalStorage()">Set New Local Save</button>
+  </div>
+  <div>
+    <button (click)="ResetSave()">Reset to prev Save</button>
+  </div>
+  <!-- <div class="search_category_carousel__item"
+       *ngFor="let category of (searchCategories$ | async)"
+  >
+    <div class="__item_title"> {{category.searchCategoryTitle}} </div>
+    <div class="__item_search-template">
+      <app-search-template-gallery
+        [SearchTemplates]="category.searchTemplates"
+        [SearchCategoryTitle]="category.searchCategoryTitle">
+      </app-search-template-gallery>
+    </div>
+  </div>-->
 </div>
+
+
