--- a/src/app/shared/search-template-gallery/search-template-gallery.component.css
+++ b/src/app/shared/search-template-gallery/search-template-gallery.component.css
@@ -1,4 +1,6 @@
 .search_template_gallery__container{
+  gap: .25em;
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
